# FVENS

./: .dir-locals.el  .directory  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  Readme.md  Todo.md
benchmarking/: CMakeLists.txt  threads_async.cpp  threads_async_tests.cpp  threads_async_tests.hpp
src/: .aexplicitsolver.hpp.swp  .alimiter.hpp.swp  .anumericalflux.hpp.swp  .areconstruction.hpp.swp  .directory  CMakeLists.txt  aarray2d.cpp  aarray2d.hpp  aconstants.hpp  adatastructures.cpp  adatastructures.hpp  adolc_eigen.hpp  aeulerflux.hpp  aeulerfluxnormal.hpp  aexplicitsolver.cpp  aexplicitsolver.hpp  afactory.cpp  afactory.hpp  agradientschemes.cpp  agradientschemes.hpp  aimplicitsolver.cpp  aimplicitsolver.hpp  alimiter.cpp  alimiter.hpp  alimiter_bak.hpp  alinalg.cpp  alinalg.hpp  amatrix.cpp  amatrix.hpp  amatrix2.cpp  amatrix2.hpp  amatrixt.hpp  amesh2.hpp  amesh2dh.cpp  amesh2dh.hpp  ameshutils.cpp  ameshutils.hpp  anumericalflux.cpp  anumericalflux.hpp  aodesolver.cpp  (+35 more)
src/backup/: aarray2d.cpp  aeulerflux.hpp  aeulerfv-muscl.hpp  aeulerfv.hpp  aimplicitsolver.hpp  alimiter_parallel.hpp  alimiter_parallel_cons.hpp  alinalg.cpp  alinalg.hpp  alinalg_beforeLinop.cpp  anumericalflux_bak.hpp  anumericalflux_parallel.hpp  anumericalflux_parallel_cons.hpp  aspatial-thinlayer.cpp  aspatial.cpp  backup-alimiter-reg_interface_values.hpp  get_HLL_flux_dv_both.c  get_HLL_flux_dv_left.cpp  get_HLL_flux_dv_right.c  get_hllc_left.cpp  get_hllc_right.cpp  steadyLUimplicitsolver.cpp  steadyimplicitsolver.cpp
src/comm/: ghostveccomm.cpp  ghostveccomm.hpp
src/linalg/: alinalg.cpp  alinalg.hpp  petsc_assembly.cpp  petsc_assembly.hpp  petscutils.cpp  petscutils.hpp  tracevector.cpp  tracevector.hpp
src/mesh/: amesh.cpp  amesh.hpp  amesh2dh.cpp  amesh2dh.hpp  ameshutils.cpp  ameshutils.hpp  details_lineordering.hpp  extrameshutils.cpp  extrameshutils.hpp  mesh.cpp  mesh.hpp  meshordering.cpp  meshordering.hpp  meshpartitioning.cpp  meshpartitioning.hpp  meshreaders.cpp  meshreaders.hpp
src/ode/: aodesolver.cpp  aodesolver.hpp  nonlinearrelaxation.cpp  nonlinearrelaxation.hpp
src/physics/: aphysics.cpp  aphysics.hpp  aphysics_defs.hpp  viscousphysics.cpp  viscousphysics.hpp
src/spatial/: abc.cpp  abc.hpp  abctypemap.cpp  abctypemap.hpp  abctypes.hpp  agradientschemes.cpp  agradientschemes.hpp  agradientschemes.hpp~  anumericalflux.cpp  anumericalflux.hpp  anumericalflux.hpp~  aoutput.cpp  aoutput.hpp  areconstruction.cpp  areconstruction.hpp  areconstruction.hpp~  aspatial.cpp  aspatial.hpp  aspatial.hpp~  convdiff.cpp  convdiff.hpp  diffusion.cpp  diffusion.hpp  flow_spatial.cpp  flow_spatial.hpp  limitedlinearreconstruction.cpp  limitedlinearreconstruction.hpp  musclreconstruction.cpp  musclreconstruction.hpp  reconstruction_utils.hpp
src/tests/: CMakeLists.txt  flowfv.cpp
src/utilities/: CMakeLists.txt  aarray2d.cpp  aarray2d.hpp  adolcutils.hpp  aerrorhandling.cpp  aerrorhandling.hpp  afactory.cpp  afactory.hpp  aoptionparser.cpp  aoptionparser.hpp  autilities.cpp  autilities.hpp  casesolvers.cpp  casesolvers.hpp  controlparser.cpp  controlparser.hpp  convertformat.cpp  helper_algorithms.hpp  levelschedule.cpp  listofarrays.hpp  mpiutils.cpp  mpiutils.hpp
testcases/naca0012/: CMakeLists.txt  explicit.control  implicit.control  naca0012-inviscid.msh  naca0012-nasa.geo  naca0012.control  opts.petscrc  opts.solverc  regr-MUSCL_LS_HLLC_LineOrdering.txt  regr-MUSCL_LeastSquares_HLLC.txt  regr-WENO_LeastSquares_HLLC.txt  transonic-explicit.ctrl  transonic-implicit.ctrl  transonic-sanity-test-muscl.ctrl  transonic-sanity-test-weno.ctrl  transonic-sanity-test.ctrl
testcases/visc-cylinder/: CMakeLists.txt  explicit.control  implicit.control  laminar-expl.ctrl  laminar-implicit.ctrl  mgopts.petscrc  opts.petscrc  opts.solverc  regr-LeastSquares_HLLC.txt
testcases/visc-naca0012/: CMakeLists.txt  benchmark.petscrc  explicit.control  implicit.control  laminar-implicit-linercm.ctrl  laminar-implicit.ctrl  mgopts.petscrc  mgopts.solverc  opts.petscrc  opts.solverc  regr-LS_Roe_LineOrdering.txt  regr-LS_Roe_LineOrdering_RCM.txt  regr-LeastSquares_Roe.txt  vnaca-implicit.ctrl
tests/: CMakeLists.txt  benchtest.sh  flow_clcd_conv.cpp  flow_conv.cpp  flow_solve.cpp  flowfv.cpp  flowpseudotime.cpp  flowspatial.cpp  flowtemporal.cpp  heat_steady.cpp  mesh.cpp  test.hpp  testflowspatial.cpp  testflowspatial.hpp
tests/common-input/: box-tet.msh  box3d-occ.geo  box3d.geo  squarecoarse.msh  testanisotropic-checkdata.txt  testanisotropic-line_rcm_ordering.txt  testanisotropic-lineordering.txt  testanisotropic.msh  testhybrid.msh  testhybrid_part1.msh  testhybrid_part2.msh  testhybrid_part3.msh  testperiodic.msh
tests/finite-volume/: CMakeLists.txt  runtest_gradientschemes.cpp  testgradientschemes.cpp  testgradientschemes.hpp
tests/flow/: benchmark.petscrc  flatplate.control  flatplate.petscrc  inv-cyl-gg-hllc_tri.control  inv-cyl-ls-hllc_quad.control  inv-cyl-ls-hllc_tri.control  inv_cyl.petscrc  opts.petscrc  small-2dcylinder.control  testexception.control  transonic-naca0012.control
tests/flow-general/: CMakeLists.txt  benchmark.ctrl  benchmark.solverc  flowspatial.cpp  small-2dcylinder.ctrl  test.ctrl  test_res_hist.cpp  test_res_hist.sh  testbench.cpp  testbench.sh  testd_wallbcs.cpp  testeulerbcs.cpp  testeulerbcs.hpp  testexception.ctrl  testexception.solverc  testflowspatial.cpp  testflowspatial.hpp  testwallbcs.cpp  testwallbcs.hpp
tests/heat/: CMakeLists.txt  explicit.control  explls_quad.octrl  heat_steady.cpp  implls_quad.control  implls_quad.octrl  implls_tri.control  implls_tri.octrl  opts.petscrc  opts.solverc
tests/input/: 2dcylinderhybrid.msh  test.cfg  test.ctrl  testperiodic-old.msh
tests/inv-2dcyl/: CMakeLists.txt  expl-cyl-ls-hllc.ctrl  expl-inv-cyl-gg-hllc_tri.ctrl  expl-inv-cyl-gg-roe_tri.ctrl  inv-cyl-base.ctrl  inv-cyl-gg-hllc_tri.ctrl  inv-cyl-ls-hllc.ctrl  inv-cyl-ls-hllc_quad.ctrl  inv-cyl-ls-hllc_tri.ctrl  inv_cyl.solverc  simple_inv_cyl.solverc
tests/inv-gaussianbump/: CMakeLists.txt  base.ctrl  explicit.ctrl  gaussian_channel.geo  (+4 more)
(+419 files in other folders)
